--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+:root {
+    // (Dark Mode Text & Light Mode Elements)
+    --white: hsl(0, 0%, 100%);
+    //(Dark Mode Elements) 
+    --d-element: hsl(209, 23%, 22%);
+    // (Dark Mode Background)
+    --d-bg: hsl(207, 26%, 17%);
+    --d-text: var(--white);
+    // (Light Mode Text)
+    --l-text: hsl(200, 15%, 8%);
+    // (Light Mode Input)
+    --l-input: hsl(0, 0%, 52%);
+    // (Light Mode Background)
+    --l-bg: hsl(0, 0%, 98%);
+    --l-element: var(--white);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Nunito' sans-serif;
+}
+
+.shadow {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
